logs/ulif.plone.testsetup.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/martian'...
Listing './lib/python3.5/site-packages/martian/tests'...
Listing './lib/python3.5/site-packages/martian/tests/scanforclasses'...
Listing './lib/python3.5/site-packages/martian/tests/stoneage'...
Listing './lib/python3.5/site-packages/martian/tests/stoneage/hunt'...
Listing './lib/python3.5/site-packages/martian/tests/stoneage/hunt/mammoth_templates'...
Listing './lib/python3.5/site-packages/martian/tests/stoneage/notpackage'...
Listing './lib/python3.5/site-packages/martian/tests/stoneage/painting'...
Listing './lib/python3.5/site-packages/martian/tests/testpackage'...
Listing './lib/python3.5/site-packages/martian/tests/testpackage/alpha'...
Listing './lib/python3.5/site-packages/martian/tests/testpackage/beta'...
Listing './lib/python3.5/site-packages/martian/tests/with__main__'...
Listing './lib/python3.5/site-packages/martian/tests/withbogusmodules'...
Listing './lib/python3.5/site-packages/martian/tests/withbogusmodules/.bogussubpackage'...
Listing './lib/python3.5/site-packages/martian/tests/withbogusmodules/subpackage'...
Listing './lib/python3.5/site-packages/martian/tests/withpyconly'...
Listing './lib/python3.5/site-packages/martian/tests/withpyconly/subpackage'...
Listing './lib/python3.5/site-packages/martian/tests/withtestsmodules'...
Listing './lib/python3.5/site-packages/martian/tests/withtestsmodules/subpackage'...
Listing './lib/python3.5/site-packages/martian/tests/withtestspackages'...
Listing './lib/python3.5/site-packages/martian/tests/withtestspackages/ftests'...
Listing './lib/python3.5/site-packages/martian/tests/withtestspackages/subpackage'...
Listing './lib/python3.5/site-packages/martian/tests/withtestspackages/tests'...
Listing './lib/python3.5/site-packages/martian/tests/withtestspackages/tests/subpackage'...
Listing './lib/python3.5/site-packages/martian-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/ulif'...
Listing './lib/python3.5/site-packages/ulif/plone'...
Listing './lib/python3.5/site-packages/ulif/plone/testsetup'...
Listing './lib/python3.5/site-packages/ulif/plone/testsetup/tests'...
Listing './lib/python3.5/site-packages/ulif/plone/testsetup/tests/cave'...
Listing './lib/python3.5/site-packages/ulif/plone/testsetup/tests/cave/profiles'...
Listing './lib/python3.5/site-packages/ulif/plone/testsetup/tests/cave/profiles/default'...
Listing './lib/python3.5/site-packages/ulif.plone.testsetup-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/z3c'...
Listing './lib/python3.5/site-packages/z3c/testsetup'...
Listing './lib/python3.5/site-packages/z3c/testsetup/functional'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/cave'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/cave/.hiddendir'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/cave/subdir'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/cave/tests'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/cave_to_let'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/importerrorcave'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave'...
Listing './lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/bar'...
Compiling './lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/bar/__init__.py'...
***   File "./lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/bar/__init__.py", line 14
    print "Bar!"
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/foo'...
Compiling './lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/foo/__init__.py'...
***   File "./lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/foo/__init__.py", line 15
    print "Foo!"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/layer.py'...
***   File "./lib/python3.5/site-packages/z3c/testsetup/tests/layered_cave/layer.py", line 65
    print "    Running testSetUp of UnitLayer1"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/z3c/testsetup/tests/othercave'...
Listing './lib/python3.5/site-packages/z3c.testsetup-0.8.4.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/testing'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.testing-4.6.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
